--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "serverstart": "SET DEBUG=blog:* npm run devstart"
   },
   "dependencies": {
+    "async": "^3.2.2",
+    "config": "^3.3.6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.1.3",
     "morgan": "~1.9.1",
     "pug": "^3.0.2"
   },
