--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
+    "luxon": "^2.3.0",
     "mongoose": "^6.1.3",
     "morgan": "~1.9.1",
     "pug": "^3.0.2"
